[tool.poetry]
name = "genetic-algorithm-simulation"
version = "0.1.0"
description = "This project is a Python-based Genetic Algorithm (GA) simulator with an interactive GUI using Tkinter and visualization using Pygame. It demonstrates the use of evolutionary principles such as selection, mutation, crossover, and more advanced techniques like mutualism, communalism, elitism, and adaptive mutation rates."
authors = ["Dumbo-programmer <rony.120285d2k@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
astroid = "1.6.6"
attrs = "23.2.0"
bottle = "0.12.25"
certifi = "2024.2.2"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
colorama = "0.4.3"
conan = "2.0.0"  # Updated version
contourpy = "1.2.1"
cssselect = "1.2.0"
cycler = "0.12.1"
deprecation = "2.0.7"
distro = "1.8.0"
fasteners = "0.19"
fonttools = "4.53.0"
future = "0.16.0"
h11 = "0.14.0"
idna = "3.7"
isort = "5.13.2"
Jinja2 = "3.1.4"
kiwisolver = "1.4.5"
lazy-object-proxy = "1.10.0"
lxml = "5.2.2"
MarkupSafe = "2.1.5"
matplotlib = "3.9.0"
mccabe = "0.7.0"
mpmath = "1.3.0"
node-semver = "0.2.0"
numpy = "2.0.0"
outcome = "1.3.0.post0"
packaging = "24.0"
patch = "1.16"
patch-ng = "1.17.4"
pdf2image = "1.17.0"
pdfplumber = "0.5.28"  # Downgraded version for compatibility
pdfquery = "0.4.3"
pillow = "10.3.0"
pip = "24.1"
pluginbase = "0.7"
pycparser = "2.22"
pygame = "2.6.0"
Pygments = "2.18.0"
PyJWT = "1.7.1"
pylint = "1.8.4"
pyparsing = "3.1.2"
PyPDF2 = "3.0.1"
pypdfium2 = "4.30.0"
pyquery = "2.0.0"
PySocks = "1.7.1"
python-dateutil = "2.9.0.post0"
python-docx = "1.1.2"
PyYAML = "5.1"
requests = "2.31.0"
roman = "4.2"
selenium = "4.19.0"
six = "1.16.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
sympy = "1.12.1"
trio = "0.25.0"
trio-websocket = "0.11.1"
typing_extensions = "4.11.0"
urllib3 = "1.26.18"
wrapt = "1.16.0"
wsproto = "1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
